gccida/c1/enqueue_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enqueue_insn/src/expr.c:795:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)var + 2), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/enqueue_insn/src/obj/expr.o] Error 1
